--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
+    "mongoose": "^5.4.19",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.10",
     "request": "^2.88.0",
