--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client-install": "npm install --prefix client",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "MannyP",
   "license": "MIT",
@@ -13,13 +16,11 @@
     "async": "^2.6.2",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.19",
     "node-fetch": "^2.3.0",
-    "nodemon": "^1.18.10",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "set-interval-async": "^1.0.23"
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3"
