--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-spinners": "^0.5.4"
+    "react-spinners": "^0.5.4",
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
